# turtlebot_guide

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/: follower_tracker.h
launch/: cnrg_world.launch  (+6 more)
turtlebot_follower_tracker/: CMakeLists.txt  nodelet.xml  package.xml
turtlebot_follower_tracker/data/: people_object.pcd.REMOVED.git-id  scene.pcd  scene_0.pcd  scene_orig.pcd.REMOVED.git-id
turtlebot_follower_tracker/include/turtlebot_follower_tracker/: follower_tracker.h  follower_tracker_ros.h  mesh_model_loader.h  pcl_people_detectioin.h  pcl_people_detection_ros.h
turtlebot_follower_tracker/launch/: aggregate_all.launch  aggregate_lasers.launch  aggregate_rgbd_ground_hog.launch  detection_to_detection_fusion_pipeline.launch  filter_tracks.launch  freiburg_people_tracking.launch  fuse_lasers_and_rgbd.launch  laser_leg_detector.launch.xml  load_model.launch  people_detection_nodelet.launch  rgbd_laser_tracking.launch  tracking_pipeline.launch.xml  upper_body_detector.launch.xml  xtion.launch
turtlebot_follower_tracker/params/: compressedDepth.yaml  follower_tracker_params.yaml
turtlebot_follower_tracker/rviz/: load_model.rviz
turtlebot_follower_tracker/src/: follower_state_monitor.cpp  follower_tracker.cpp  follower_tracker_node.cpp  follower_tracker_nodelet.cpp  follower_tracker_ros.cpp  load_model_test.cpp  mesh_model_loader.cpp  pcl_people_detection.cpp  pcl_people_detection_ros.cpp  upper_body_detector.cpp
turtlebot_follower_tracker/src/upper_body_detector/: Globals.cpp  Globals.h  detector.cpp  main.cpp
turtlebot_follower_tracker/util/: capture_scene.cpp
turtlebot_guide/: CMakeLists.txt  package.xml
turtlebot_guide_execution/: CMakeLists.txt  package.xml
turtlebot_guide_execution/launch/: actor_robot_standalone.launch  bag_image_raw_to_pointcloud.launch  follower_monitor_system.launch  guiding_people_deviate.launch  guiding_people_empty_map.launch  guiding_people_temporarily_stops.launch  guiding_people_willowgarage.launch  guiding_people_willowgarage_scene2.launch  guiding_people_willowgarage_scene3.launch  kinect_follower_monitor_system.launch  realsense_d435i_record.launch  realsense_d435i_rviz.launch  tb3_guiding.launch  tb3_playback.launch  tracking_system_standalone.launch
turtlebot_guide_execution/launch/include/: guiding_in_gazebo.launch  spawn_tb_guide.launch.xml
turtlebot_guide_execution/maps/: empty_map.pgm  renai_5f.pgm  renai_5f.yaml
turtlebot_guide_execution/robot/: tb_guide.xacro
turtlebot_guide_execution/rviz/: guide_people.rviz  guide_people_simple.rviz  realsense_d435i.rviz  tb3_exec.rviz  tracking_system.rviz
turtlebot_guide_execution/src/: actor_waypoints_generator.cpp
turtlebot_guide_execution/worlds/: actor0.world  actor2.world  actor_deviate.world  actor_scene2.world  actor_scene3.world  script_actor.world
turtlebot_guide_integration/: CMakeLists.txt  package.xml
turtlebot_guide_integration/launch/: follower_monitor_system.launch  follower_test.launch  gazebo_navigation.launch  guide_people.launch  guide_people_empty_map.launch  guide_people_willowgarage.launch  guide_straight_path.launch  kinect_follower_monitor_system.launch  mbf_nav.launch  rosbag_test.launch  simple_guide_people .launch  simple_guide_people.launch  spawn_tb_guide.launch.xml  spawn_two_robot.launch  tracking_system.launch  tracking_system_standalone.launch  turtlebot_guide.launch  turtlebot_kobuki.launch
turtlebot_guide_integration/maps/: empty_map.yaml  willow_v2.yaml  willowgarage_perfect.pgm.REMOVED.git-id
turtlebot_guide_integration/models/: people.dae.REMOVED.git-id  people_2018-1-30-16-13-58.sdf  people_2018-1-30-21-27-51.sdf  people_2018-1-30-21-32-23.sdf  people_2018-1-30-21-35-16.sdf  people_2018-1-30-21-41-50.sdf  people_2018-2-3-0-30-19.sdf  people_v3.dae.REMOVED.git-id
turtlebot_guide_integration/models/Table/: Render1.png.REMOVED.git-id  Render2.png.REMOVED.git-id  table.blend.REMOVED.git-id  table.blend1.REMOVED.git-id  table.dae  table.fbx  table.mtl
turtlebot_guide_integration/models/chair/: chair.dae
turtlebot_guide_integration/robot/: turtlebot.pcd  turtlebot.ply.REMOVED.git-id  turtlebot_follower.xacro  turtlebot_guidance.xacro  turtlebot_guidance_simple.xacro
turtlebot_guide_integration/rviz/: guidance.rviz  guide_people.rviz  kinect_track.rviz  navigation.rviz  robot_guidance.rviz  tracking_system.rviz
turtlebot_guide_integration/scripts/: actor_walking_pattern_generator.py
turtlebot_guide_integration/src/: actor_waypoints_generator.cpp  guide_straight_path.cpp
turtlebot_guide_integration/trajectories/: scene_0.txt
turtlebot_guide_integration/worlds/: actor0.world  actor1.world  actor2.world  robot_following_actor.world  script_actor.world  simple_actor.world  test_people_walk.world  willowgarage.world  willowgarage_people.world  willowgarage_people_walk.world
turtlebot_guide_msgs/: CMakeLists.txt  package.xml
turtlebot_guide_msgs/action/: ExePath.action  GetPath.action
turtlebot_guide_msgs/msg/: FollowerState.msg
turtlebot_guide_planner/: CMakeLists.txt  package.xml
turtlebot_guide_planner/src/: global_path_plan_node.cpp  map_odom_publisher.cpp  turtlebot_guide_node.cpp
turtlebot_guide_planner/test/: test_single_ir_camera.cpp
turtlebot_guide_visualization/: CMakeLists.txt  package.xml
turtlebot_guide_visualization/launch/: visualization.launch
turtlebot_guide_visualization/src/: visualization_node.cpp
turtlebot_mbf_nav/: CMakeLists.txt  package.xml
turtlebot_mbf_nav/cfg/: MoveBaseFlex.cfg
turtlebot_mbf_nav/launch/: amcl.launch  mbf.launch.xml  mbf_amcl.launch  mbf_nav.launch
turtlebot_mbf_nav/param/: mbf_params.yaml
turtlebot_mbf_nav/params/: controllers.yaml  costmap_common_params.yaml  global_costmap_param.yaml  global_costmap_params.yaml  local_costmap_params.yaml  mbf.rviz  mbf_params.yaml  multi_controllers.yaml  planners.yaml  recovery_behaviors.yaml
turtlebot_mbf_nav/rviz/: mbf.rviz
turtlebot_mbf_nav/scripts/: move_base_legacy_relay.py
turtlebot_mbf_nav/src/: costmap_controller_execution.cpp  costmap_navigation_server.cpp  move_base_server_node.cpp
(+24 files in other folders)
