<?xml version="1.0"?>
<package>
  <name>turtlebot_guidance</name>
  <version>0.0.0</version>
  <description>The turtlebot_guidance package</description>
  <maintainer email="shtseng@todo.todo">shtseng</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>rviz_visual_tools</build_depend>
	<build_depend>gazebo_ir_camera_plugin</build_depend>

  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>rviz_visual_tools</run_depend>
	<run_depend>gazebo_ir_camera_plugin</run_depend>

</package>
