<?xml version="1.0"?>
<package format="2">
  <name>turtlebot_follower_tracker</name>
  <version>0.0.0</version>
  <description>The sub-package of turtlebot_guide </description>
  <maintainer email="q253upng@gmail.com">SHTseng</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>libpcl-all-dev</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>tf</depend> 
  <depend>eigen_conversions</depend>
  <depend>nodelet</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>spencer_tracking_msgs</depend>
  <depend>turtlebot_guide_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>spencer_diagnostics</depend>
  <depend>rwth_perception_people_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet.xml" />
  </export>
</package>
