<package>
  <name>turtlebot_guide</name>
  <version>0.0.5</version>
  <description>metapackage of turtlebot_guide</description>
  <maintainer email="q253upng@gmail.com">SHTseng</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>turtlebot_follower_tracker</run_depend>
  <run_depend>turtlebot_mbf_nav</run_depend>
  <run_depend>turtlebot_guide_execution</run_depend>
  <run_depend>turtlebot_guide_visualization</run_depend>

  <export>
    <metapackage/> 
  </export>
</package>
