<?xml version="1.0"?>
<package format="2">
  <name>turtlebot_guide_integration</name>
  <version>0.0.0</version>
  <description>The sub-package of turtlebot_guide </description>
  <maintainer email="q253upng@gmail.com">SHTseng</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>

</package>
