<?xml version="1.0"?>
<package format="2">
  <name>turtlebot_guide_planner</name>
  <version>0.0.0</version>
  <description>The sub-package of turtlebot_guide </description>
  <maintainer email="q253upng@gmail.com">SHTseng</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rostest</build_depend>
  <depend>nav_core</depend>
  <depend>base_local_planner</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>move_base_msgs</depend>

</package>
